@@ -1,5 +1,12 @@
 # $Id$
 
+2007-02-01	Konstantin V. Arkhipov
+
+	* core/OSQL/OrderChain.class.php: introduced.
+
+	* main/Criteria/Criteria.class.php: ability to add custom sort for
+	fetching collections implemented.
+
 2007-01-31	Dmitry E. Demidov
 
 	* main/Utils/ClassUtils.class.php: added class for copy 
